--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
