--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,7 @@
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.2",
     "cors": "^2.8.6",
-    "express": "^5.2.1",
+    "express": "4.18.2",
     "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
